# OxideExpo

./: .gitignore  DEV_CONTAINER_SETUP.md  IMPLEMENTATION_PLAN.md  MIGRATION_PLAN_RUST.md  PENDING_TASKS.md  POC_IMPLEMENTATION_PLAN.md  POC_TASK_BREAKDOWN.md  REWRITE_ANALYSIS.md
.devcontainer/: devcontainer.json
OxideExpo/: README.md  docker-compose.dev.yml  docker-compose.yml  test-all.sh
OxideExpo/backend/: Cargo.toml  Dockerfile.dev
OxideExpo/backend/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
OxideExpo/backend/migrations/: 0001_create_extensions.sql  0002_create_enums.sql  0003_create_reference_tables.sql  0004_seed_reference_data.sql  0005_create_users_auth_tables.sql  0006_create_job_seeker_profile_tables.sql  0007_fix_completeness_trigger_recursion.sql  0008_create_company_profile_tables.sql  0009_create_job_posting_tables.sql  0010_create_admin_tables.sql  0011_create_matching_tables.sql  0012_create_omil_tables.sql  0013_create_v9_features.sql  0014_create_v10_omil_features.sql  0015_v11_v12_completion.sql  001_initial_schema.sql
OxideExpo/backend/src/: config.rs  error.rs  lib.rs  main.rs
OxideExpo/backend/src/handlers/: admin.rs  applicants.rs  applications.rs  auth.rs  company.rs  files.rs  health.rs  invitations.rs  jobs.rs  matching.rs  mod.rs  omil.rs  profile.rs  reference.rs  saved_jobs.rs
OxideExpo/backend/src/middleware/: admin_auth.rs  auth.rs  mod.rs  omil_auth.rs
OxideExpo/backend/src/models/: admin.rs  applicant.rs  application.rs  company.rs  file.rs  job.rs  matching.rs  mod.rs  omil.rs  profile.rs  reference.rs  saved_job.rs  user.rs
OxideExpo/backend/src/services/: email.rs  matching.rs  mod.rs  storage.rs
OxideExpo/backend/src/utils/: jwt.rs  mod.rs  password.rs  validation.rs
OxideExpo/backend/tests/: applications_test.rs  auth_test.rs  jobs_test.rs
OxideExpo/backend/tests/common/: mod.rs
OxideExpo/frontend/: Dockerfile.dev  PLAYWRIGHT_ISSUE.md  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
OxideExpo/frontend/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
OxideExpo/frontend/e2e/: admin-dashboard.spec.ts  company-dashboard.spec.ts  helpers.ts  profile.spec.ts  user-flow.spec.ts  v1-infrastructure.spec.ts  v10-omil-complete.spec.ts  v11-admin-complete.spec.ts  v12-reporting.spec.ts  v2-auth.spec.ts  v3-job-seeker-profile.spec.ts  v4-company-profiles.spec.ts  v5-applications.spec.ts  v5-job-management.spec.ts  v5-public-jobs.spec.ts  v6-admin-dashboard.spec.ts  v7-matching.spec.ts  v8-invitations.spec.ts  v8-omil.spec.ts  v9-applicants.spec.ts  v9-files.spec.ts  v9-saved-jobs.spec.ts
OxideExpo/frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
OxideExpo/frontend/src/app/admin/: layout.tsx  page.tsx
OxideExpo/frontend/src/app/admin/companies/: page.tsx
OxideExpo/frontend/src/app/admin/jobs/: page.tsx
OxideExpo/frontend/src/app/admin/reports/: page.tsx
OxideExpo/frontend/src/app/admin/users/: page.tsx
OxideExpo/frontend/src/app/company/: layout.tsx  page.tsx
OxideExpo/frontend/src/app/company/jobs/: page.tsx
OxideExpo/frontend/src/app/company/profile/: page.tsx
OxideExpo/frontend/src/app/login/: page.tsx
OxideExpo/frontend/src/app/my-applications/: page.tsx
OxideExpo/frontend/src/app/profile/: layout.tsx  page.tsx
OxideExpo/frontend/src/app/register/: page.tsx
OxideExpo/frontend/src/components/: Countdown.tsx  JobCard.tsx  Navbar.tsx
OxideExpo/frontend/src/components/auth/: AuthModals.tsx  CompanyRegisterModal.tsx  ForgotPasswordModal.tsx  LoginModal.tsx  RegisterModal.tsx  index.ts
OxideExpo/frontend/src/components/dashboard/: DashboardLayout.tsx  ProfileProgress.tsx  StatsCard.tsx  index.ts
OxideExpo/frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  CascadingSelect.tsx  FileUpload.tsx  Input.tsx  Modal.tsx  Select.tsx  Sidebar.tsx  StepWizard.tsx  Table.tsx  Tabs.tsx  Textarea.tsx  Toast.tsx  index.ts
OxideExpo/frontend/src/contexts/: AuthContext.tsx  AuthModalContext.tsx
OxideExpo/frontend/src/lib/: api.ts  schemas.ts  utils.ts
OxideExpo/frontend/src/types/: index.ts
docs/: ARCHITECTURE_PLAN.md  CAPABILITIES_CHECKLIST.md  IMPLEMENTATION_VERTICALS.md  UI_IMPLEMENTATION_TRACKER.md
(+12 files in other folders)
