[package]
name = "empleos-inclusivos-backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "empleos_inclusivos_backend"
path = "src/lib.rs"

[[bin]]
name = "empleos-inclusivos-backend"
path = "src/main.rs"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# TypeScript generation
ts-rs = "7.1"

# Authentication
jsonwebtoken = "9"
bcrypt = "0.15"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Environment
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# DateTime
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"
