[package]
name = "empleos-inclusivos-backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "empleos_inclusivos_backend"
path = "src/lib.rs"

[[bin]]
name = "empleos-inclusivos-backend"
path = "src/main.rs"

[dependencies]
# Web Framework
axum = { version = "0.8", features = ["macros", "multipart"] }
axum-extra = { version = "0.10", features = ["typed-header", "cookie"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util", "timeout"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "limit"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
    "migrate",
    "json"
] }

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Type Generation
ts-rs = { version = "10", features = ["chrono-impl", "uuid-impl"] }

# Authentication
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
argon2 = "0.5"
rand = "0.8"
hex = "0.4"
sha2 = "0.10"

# Validation
validator = { version = "0.18", features = ["derive"] }
regex = "1.10"
once_cell = "1.19"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "v7", "serde"] }

# Email
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "builder", "smtp-transport"] }

# Background Jobs
tokio-cron-scheduler = "0.13"

# Object Storage
aws-sdk-s3 = "1.0"
aws-config = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Environment
dotenvy = "0.15"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
tokio-test = "0.4"
fake = { version = "2.9", features = ["derive"] }
wiremock = "0.6"
